examples/should-fail/f26_bad_universe_alias_level.lean
def demo3_u_alias : Sort 2 :=
  Type

def demo3_bad_universe_alias_level : Sort 3 :=
  demo3_u_alias
